# connectivity_similarity_maps

./: .env.example  .gitignore  LICENSE  README.md  analysis.ipynb  convert_datasets.py  plot_dendrogram.py  plot_shared_partners.py  plot_similarity_matrix.py  pyproject.toml
data/processed/: oa_name_map.csv
scripts/: auxiliary_functions.py  convert_datasets.py  convert_fafb.py  convert_manc.py  convert_mcns.py  data_loader.py  paths.py  plot_dendrogram.py  plot_shared_partners.py  plot_similarity_matrix.py
src/proj/config/: consts.py  paths.py  secret_example.py
src/proj/plotting/: dendro.py  partners.py  sim_map.py
src/proj/processing/: connectivity.py  convert_fafb.py  convert_manc.py  convert_mcns.py  data_loader.py
src/proj/utils/: linkage_formatter.py
